# substrate-constructor

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust-test.yml
for_tests/: statemint1003003  statemint1003004
src/: error.rs  fill_prepare.rs  finalize.rs  first_empty.rs  is_ready.rs  lib.rs  peeker.rs  storage_query.rs  tests.rs  traits.rs  try_fill.rs
