[package]
description = "Extrinsic constructor for Substrate based chains"
license = "GPL-3.0-or-later"
name = "substrate-constructor"
version = "0.2.1"
authors = [
    "Alexander Slesarev <slesarew@gmail.com>",
    "Vera Abramova <abramova.vera@gmail.com>",
]
edition = "2021"
repository = "https://github.com/Alzymologist/substrate-constructor"
homepage = "https://github.com/Alzymologist/substrate-constructor"
documentation = "https://docs.rs/substrate_constructor/"
keywords = ["parser", "substrate"]
exclude = ["/for_tests", "/.github"]

[features]

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
external-memory-tools = { version = "0.1.1", default-features = false }
frame-metadata = { version = "20.0.0", default-features = false, features = [
    "current",
    "decode",
] }
hex = "0.4.3"
num-bigint = { version = "0.4.6", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
primitive-types = { version = "0.13.1", default-features = false }
scale-info = { version = "2.11.5", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
substrate-crypto-light = { version = "0.2.0", default-features = false, features = [
    "ecdsa",
    "ed25519",
    "sr25519",
] }
substrate_parser = { version = "0.7.1", default-features = false }
